# nixos-cookbook

./: AUTHORS.md  README.md
cookbook/01-introduction/: README.md
cookbook/02-environments/: README.md
cookbook/02-environments/haskell-aaronmblevin/: README.md  project-name.cabal  project-name.nix  run.nix  shell.nix
