name:                project-name
version:             0.0.0.1
synopsis:            Some project
homepage:            https://github.com/aaronlevin/nixos-cookbook
category:            Web
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:

  ghc-options:
    -threaded
    -Wall
    -fno-warn-name-shadowing
    -O2

  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , bytestring
                     , base64-bytestring
                     , containers
                     , free
                     , http-types
                     , jwt
                     , mtl
                     , text
                     , time
                     , transformers
                     , uuid

  default-language: Haskell2010

  hs-source-dirs: src
